k8s/namespace.yml

apiVersion: v1
kind: Namespace
metadata:
  name: flask
  labels:
    name: two-tier-app
