k8s/flask-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: two-tier-app-service
  namespace: flask
spec:
  selector:
    app: two-tier-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30004
  type: NodePort
